@@ -1,4 +1,9 @@
 
+= 2009/04/04	0.61
+
+Stefan Seifert sent in a patch to make it LSB conformant.
+Note: start now exits with 0 if the daemon is already running.
+
 scips noted an error in the example program.
 
 = 2007/08/15	0.51
